--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "npx cypress open"
+    "test": "npx cypress open",
+    "cypress:open": "npx cypress open",
+    "cypress:run": "npx cypress run"
   },
   "keywords": [
     "cypress",
@@ -16,7 +18,13 @@
   "author": "Johnny Kamigashima",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.5.3"
+    "@cypress/webpack-preprocessor": "^6.0.2",
+    "@types/cypress": "^1.1.3",
+    "@types/node": "^20.14.10",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.3",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "cypress": "^13.13.0"
