--- a/package.json
+++ b/package.json
@@ -18,13 +18,10 @@
   "author": "Johnny Kamigashima",
   "license": "ISC",
   "devDependencies": {
-    "@cypress/webpack-preprocessor": "^6.0.2",
+    "@faker-js/faker": "^8.4.1",
     "@types/cypress": "^1.1.3",
     "@types/node": "^20.14.10",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.5.3",
-    "webpack": "^5.92.1",
-    "webpack-cli": "^5.1.4"
+    "typescript": "^5.5.3"
   },
   "dependencies": {
     "cypress": "^13.13.0"
