--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "include": [
         "**/*.ts",
-        "../cypress.d.ts"
+        "../cypress.d.ts",
+        "../cypress/support/commands.d.ts"
     ]
 }
