--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,7 +1,6 @@
 {
     "include": [
         "**/*.ts",
-        "../cypress.d.ts",
-        "../cypress/support/commands.d.ts"
+        "../cypress.d.ts"
     ]
 }
