--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "@faker-js/faker": "^8.4.1",
     "@types/cypress": "^1.1.3",
     "@types/node": "^20.14.10",
+    "cypress-fail-fast": "^7.1.0",
     "cypress-log-filter": "^1.0.5",
+    "cypress-mochawesome-reporter": "^3.8.2",
     "cypress-xpath": "^2.0.1",
-    "typescript": "^5.5.3"
+    "globals": "^15.8.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^7.16.1"
   },
   "dependencies": {
     "cypress": "^13.13.0",
