--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,11 +15,7 @@ steps:
     versionSpec: '20.x'
   displayName: 'Install Node.js'
 
-- script: 
+- script: |
     npm install
-    npm run build
-  displayName: 'npm install and build'
-  
-- script: 
     npx cypress run
-  displayName: Run Cypress  
+  displayName: 'npm install and run cypress'
